--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "clsx": "^2.1.0",
     "cmdk": "^0.2.1",
     "dayjs": "^1.11.10",
+    "file-saver": "^2.0.5",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
     "lucide-react": "^0.453.0",
@@ -65,6 +66,7 @@
     "recharts": "^2.12.5",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
+    "xlsx": "^0.18.5",
     "zod": "^3.22.4"
   },
   "devDependencies": {
