--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "cmdk": "^0.2.1",
     "dayjs": "^1.11.10",
     "file-saver": "^2.0.5",
+    "html2canvas": "^1.4.1",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
     "lucide-react": "^0.453.0",
