--- a/package.json
+++ b/package.json
@@ -21,6 +21,23 @@
     "@google/generative-ai": "^0.21.0",
     "@hello-pangea/dnd": "^17.0.0",
     "@hookform/resolvers": "^3.3.4",
+    "@nivo/bar": "^0.99.0",
+    "@nivo/bullet": "^0.99.0",
+    "@nivo/bump": "^0.99.0",
+    "@nivo/calendar": "^0.99.0",
+    "@nivo/chord": "^0.99.0",
+    "@nivo/circle-packing": "^0.99.0",
+    "@nivo/core": "^0.99.0",
+    "@nivo/funnel": "^0.99.0",
+    "@nivo/heatmap": "^0.99.0",
+    "@nivo/line": "^0.99.0",
+    "@nivo/pie": "^0.99.0",
+    "@nivo/radar": "^0.99.0",
+    "@nivo/sankey": "^0.99.0",
+    "@nivo/scatterplot": "^0.99.0",
+    "@nivo/stream": "^0.99.0",
+    "@nivo/treemap": "^0.99.0",
+    "@nivo/waffle": "^0.99.0",
     "@radix-ui/react-alert-dialog": "^1.1.4",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.0.4",
