--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "shadcn-admin",
+  "name": "PMS Zaibten Info",
   "private": true,
   "version": "1.0.0-beta.2",
   "type": "module",
@@ -75,9 +75,9 @@
     "jspdf-autotable": "^3.8.4",
     "lucide-react": "^0.453.0",
     "next": "^15.3.3",
-    "react": "^19.1.0",
+    "react": "^18.2.0",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^19.1.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.3",
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.22.3",
